# SimulatedCauchyOptimization

./: CMakeLists.txt  GreedyBenchmark.cpp  Notes.md  README.md  getThreadsFromQuery.h  main.cpp  makefile  permutationGroup.cpp  prova.txt  test1D.cpp  test1D.cpp.bak  travelling_salesman.cpp
Parallel/Utilities/: patterns.h
Serial/Diffusion/: diffusion.h  diffusion.h.bak
Serial/NormalGeneration/SimpleGaussian/: SimpleGaussian.h  SimpleGaussian.h.bak
Serial/Optimizer/: OptimizerModule.h  optimizer.h
Serial/Optimizer/Optimizer/: Optimizer.h
Serial/Optimizer/OptimizerScheduler/: callbacks.h
Serial/Optimizer/OptimizerStatus/: OptimizerStatus.h
Serial/OutputManager/: CSV.h
Serial/Profiler/: Profiler.h
Serial/Utilities/: utilities.h  utilities.h.bak
Serial/Vectorial/: VectorialModule.h
Serial/Vectorial/Neighbourhood/: Neighbourhood.h
Serial/Vectorial/Vectorial/: Vectorial.h
Serial/Vectorial/VectorialClasses/: Combination.h  Permutation.cpp  Permutation.h  Real.cpp  Real.h  Vector.cpp  Vector.h
Serial/Vectorial/VectorialClasses/PermutationHelpers/: CauchyRepresentation.cpp  CauchyRepresentation.h  minobj.cpp  minobj.h
Serial/Visualization/Cpp/: Visualization.h
Tests/: real_test.cpp  travelling_salesman.cpp  vector_test.cpp
Visualizer/RealTest/: RealTest.py
Visualizer/Test1/: Test1.py
